name:                Fun
version:             0.1.0.0
synopsis:            A type system for a functional toy language
homepage:            https://github.com/JasperRobeer/functional-lang
author:              Jasper Robeer
maintainer:          Jasper Robeer <developer@jasperrobeer.com>
copyright:           (c) 2017 Jasper Robeer
category:            Compilers/Interpreters
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -W
